--- a/hamburgerMenu.css
+++ b/hamburgerMenu.css
@@ -2,7 +2,7 @@
 {
 	background-color:#2e303d;
 	opacity:0.6;
-	transition: opacity 0.1s;
+	transition: opacity 150ms;
 }
 
 .loginM
@@ -13,11 +13,10 @@
 	position: relative;
 	border-top:1px solid #4f525f;
 	border-left:1px solid #4f525f;
-	border-bottom:1px solid #2e303d;
 	color:#fff;
-	padding:8px;
-	padding-bottom:7px;
-	font-size:13px;
+	padding:10px;
+	font-size:11px;
+	height:35px;
 }
 
 #menu {
@@ -49,7 +48,7 @@
 }
 
 #menu ul li a {
-	font-size:12px;
+	font-size:11px;
 	width:160px;
     display: block;
 	padding: 7px 10px;
@@ -58,6 +57,7 @@
 	line-height: 20px;
 	border-left:1px solid #4f525f;
 	height:35px;
+	transition: font-size 100ms;
 }
 
 .colorMenu:hover
@@ -67,7 +67,6 @@
 
 #menu ul li a.home{
 	width:50px;
-	border-left:1px solid #4f525f;
 }
 
 #menu ul li a.out{
@@ -77,7 +76,7 @@
 #menu ul li a:hover {
 	font-size:14px;
 	opacity:1;
-	transition-duration:60ms;
+	transition: font-size 150ms;
 	border-bottom:2px solid #fff;
 }
 
