--- a/style.css
+++ b/style.css
@@ -110,6 +110,8 @@ h1
 	border-radius: 3px 0 0 3px;
 	background-color: #2e303d;
 	opacity: 0.7;
+	font-size:17px;
+	padding-top:3px;
 	color: white;
 	width: 35px;
 	height:35px;
@@ -156,7 +158,7 @@ h1
 	margin-right:auto;
 	margin-top:40px;
 	width: 302px;
-	padding: 50px 30px 30px 30px;
+	padding: 30px 30px 30px 30px;
 	border: 1px solid #e0dddd;
 	border-bottom: 3px solid #e0dddd;
 	border-top: 3px solid #e0dddd;
@@ -172,7 +174,7 @@ textarea
 	border-radius: 0 3px 3px 0;
 	width: 175px;
 	padding: 5px;
-	font-size: 14px;
+	font-size: 13px;
 	margin-top: 10px;
 	outline: none;
 	opacity:0.7;
@@ -225,7 +227,7 @@ input[type=submit]:hover
 	border-radius: 0 3px 3px 0;
 	width: 175px;
 	padding: 5px;
-	font-size: 14px;
+	font-size: 13px;
 	margin-top: 10px;
 	outline: none;
 	opacity:0.7;
@@ -237,7 +239,7 @@ input[type=submit]:hover
 	border-radius: 0 3px 3px 0;
 	width: 175px;
 	padding: 5px;
-	font-size: 14px;
+	font-size: 13px;
 	margin-top: 10px;
 	outline: none;
 	opacity:0.7;
@@ -291,6 +293,74 @@ a.tilelink
 	text-align: center;
 	color: #fff;
 	font-size: 18px;
+}
+
+#buttonSticky{
+	width:135px;
+	margin-left:15px;
+	margin-top: 15px;
+	height:35px;
+}
+
+#item 
+{
+    background-color: #2e303d;
+    color: #fff;
+	width:100%;
+    padding: 7px;
+    font-size: 13px;
+    cursor: pointer;
+	letter-spacing: 2px;
+	text-align: center;
+	border: none;
+	opacity:0.6;
+	height:35px;
+}
+
+#item:hover{
+	opacity:0.8;
+}
+
+#submenu {
+	opacity: 0;
+	width:135px;
+    background-color: #2e303d;
+    z-index: 100;
+	transition-property: max-height, opacity;
+	transition-duration: 250ms;
+}
+
+#submenu a {
+	display:none;
+    color: #fff;
+	opacity:0.8;
+    padding: 6px;
+	padding-left:10px;
+    text-decoration: none;
+	font-size: 12px;
+	text-align:left;
+	transition: padding-left 200ms;
+}
+
+#submenu a:hover 
+{
+	color: #fff;
+	opacity:1;
+	border-left:3px solid #fff;
+	padding-left:12px;
+}
+
+#buttonSticky:hover #submenu {
+	opacity: 0.8;
+	max-height: 155px;
+}
+
+#buttonSticky:hover #submenu a{
+	display: block;
+}
+
+#buttonSticky:hover #item{
+	border-bottom: 1px solid #fff;
 }
 
 #footer 
