--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body
     min-height: 100%;
     position:relative;
 	background-image: url("img/accounting-application-business-closeup-computer-data-1430481-pxhere.com.jpg");
+	background-size: cover;
 }
 
 .err_log
@@ -297,8 +298,7 @@ a.tilelink
 
 #buttonSticky{
 	width:135px;
-	margin-left:15px;
-	margin-top: 15px;
+	margin-top: 30px;
 	height:35px;
 }
 
@@ -314,7 +314,8 @@ a.tilelink
 	text-align: center;
 	border: none;
 	opacity:0.6;
-	height:35px;
+	position: relative;
+	z-index: 100;
 }
 
 #item:hover{
@@ -325,8 +326,8 @@ a.tilelink
 	opacity: 0;
 	width:135px;
     background-color: #2e303d;
+	position:relative;
     z-index: 100;
-	transition-property: max-height, opacity;
 	transition-duration: 250ms;
 }
 
@@ -339,19 +340,19 @@ a.tilelink
     text-decoration: none;
 	font-size: 12px;
 	text-align:left;
+	z-index: 100;
 	transition: padding-left 200ms;
 }
 
 #submenu a:hover 
 {
 	color: #fff;
-	opacity:1;
 	border-left:3px solid #fff;
 	padding-left:12px;
 }
 
 #buttonSticky:hover #submenu {
-	opacity: 0.8;
+	opacity: 1;
 	max-height: 155px;
 }
 
@@ -361,6 +362,73 @@ a.tilelink
 
 #buttonSticky:hover #item{
 	border-bottom: 1px solid #fff;
+}
+
+#table
+{
+	margin-top: 20px;
+	width: 100%;
+	overflow-x:auto;
+	border:2px solid #fff;
+}
+
+.tb
+{
+	width: 100%;
+}
+
+th.tableTitle{
+	height:35px;
+}
+
+tr
+{
+	padding:3px;
+	font-size:12px;
+	text-align: center;
+	background-color: #2e303d;
+	color: #fff;
+	opacity:0.6;
+}
+
+th.tabWin{
+	padding: 5px;
+	border:1px solid #fff;
+	border-left:none;
+}
+
+th.tabWinCom{
+	padding: 6px;
+	border-top:1px solid #fff;
+	border-bottom:1px solid #fff;
+}
+
+td{
+	padding:5px;
+	font-size:11px;
+	border-right:1px solid #fff;
+	border-top:1px solid #fff;
+}
+
+td.end{
+	border-right:none;
+}
+
+th.sum{
+	border-top:1px solid #fff;
+	border-right:1px solid #fff;
+}
+
+#line:hover{
+	background-color:#b22222;
+	opacity:0.8;
+}
+
+.diagram{
+	padding:20px;
+	width: 360px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 #footer 
