--- a/style.css
+++ b/style.css
@@ -369,7 +369,10 @@ a.tilelink
 	margin-top: 20px;
 	width: 100%;
 	overflow-x:auto;
-	border:2px solid #fff;
+	border:1px solid #fff;
+	border-top:3px solid #fff;
+	border-bottom:3px solid #fff;
+	border-radius: 8px;
 }
 
 .tb
@@ -459,12 +462,16 @@ th.sum{
 .balance{
 	margin-top:25px;
 	background-color: #2e303d;
-	border:2px solid #fff;
+	border:1px solid #fff;
+	border-top:3px solid #fff;
+	border-bottom:3px solid #fff;
 	width:100%;
 	opacity:0.8;
 	text-align:center;
 	color: #fff;
-	padding: 13px;
+	padding-top: 13px;
+	border-radius: 8px;
+	min-height:65px;
 }
 
 #footer 
