--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ h1
 	border: 1px solid #e0dddd;
 	border-bottom: 3px solid #e0dddd;
 	border-top: 3px solid #e0dddd;
-	border-radius: 5px;
+	border-radius: 6px;
 }
 
 input[type="text"],
@@ -451,15 +451,14 @@ th.sum{
 
 .statement{
 	color: #fff;
+	border-radius: 5px;
+	border-bottom:3px solid #21af95;
+	border-top:3px solid #21af95;
+	padding: 4px;
 	text-align:center;
-	border:1px solid #fff;
-	border-top:2px solid #fff;
 	margin-bottom:15px;
-	font-size: 13px;
-	height: 30px;
+	font-size: 14px;
 	width:215px;
-	border-radius: 5px 5px 0 0;
-	padding-top: 4px;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -507,9 +506,8 @@ th.sum{
 
 .windowSetting{
 	width:350px;
-	border:1px solid #fff;
 	border-bottom:2px solid #fff;
-	border-radius:5px;
+	border-radius:8px;
 	margin-right:auto;
 	margin-left:auto;
 	opacity:0.8;
