--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ textarea:focus
 input[type=submit]
 {
 	color: #fff;
-	background-color: #21af95;
+	background-color: #2f4f4f;
 	font-size: 13px;
 	margin-top: 20px;
 	padding: 6px 10px;
@@ -208,18 +208,16 @@ input[type=submit]
 	width: 100%;
 	border-radius: 3px;
 	letter-spacing: 2px;
-	opacity:0.9;
+	opacity:0.8;
 }
 
 input[type=submit]:focus
 {
-	background-color: #32bfa6;
 	opacity:1;
 }
 
 input[type=submit]:hover
 {
-	background-color: #32bfa6;
 	cursor:pointer;
 	opacity:1;
 }
@@ -250,7 +248,7 @@ input[type=submit]:hover
 
 .button
 {
-	background-color: #ee5a32;
+	background-color: #b22222;
 	width:212px;
 	margin-left: auto;
 	margin-right: auto;
@@ -258,14 +256,13 @@ input[type=submit]:hover
 	border-radius: 3px;
 	margin-top: 10px;
 	padding: 4px;
-	opacity: 0.9;
 	letter-spacing: 2px;
 	text-align:center;
+	opacity:0.8;
 }
 
 .button:hover
 {
-	background-color: #ff6b43;
 	cursor:pointer;
 	opacity:1;
 }
@@ -306,6 +303,7 @@ a.tilelink
 #item 
 {
     background-color: #2e303d;
+	border-radius:15px 2px 0 0;
     color: #fff;
 	width:100%;
     padding: 7px;
@@ -435,11 +433,11 @@ th.sum{
 }
 
 #lineI:hover{
-	background-color:#339878;
+	background-color:#446b43;
 }
 
 #lineE:hover{
-	background-color:#8F3212;
+	background-color:#b22222;
 }
 
 .diagram{
@@ -497,6 +495,7 @@ th.sum{
 
 .settingButton:hover{
 	cursor:pointer;
+	background-color:#b22222;
 	opacity:0.8;
 }
 
