--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ th.sum{
 	margin-right:auto;
 	margin-left:auto;
 	padding:6px;
-	width:350px;
+	width:100%;
 	text-align:center;
 	background-color:#2e303d;
 	margin-top:15px;
@@ -495,23 +495,11 @@ th.sum{
 
 .settingButton:hover{
 	cursor:pointer;
-	background-color:#b22222;
 	opacity:0.8;
 }
 
 .settingButton:focus{
 	outline: none;
-}
-
-.windowSetting{
-	width:350px;
-	border-bottom:2px solid #fff;
-	border-radius:8px;
-	margin-right:auto;
-	margin-left:auto;
-	opacity:0.8;
-	display:none;
-	border-top:2px solid #fff;
 }
 
 input[class=submitSet]{
@@ -521,6 +509,167 @@ input[class=submitSet]{
 
 .delete:hover{
 	cursor:pointer;
+}
+
+.settingButtonAddAndDelete{
+	width:90%;
+	height:30px;
+	background-color:#2e303d;
+	border:none;
+	opacity:0.8;
+	color: white;
+	font-size:12px;
+	margin-bottom:8px;
+	margin-top:8px;
+	border-radius: 5px;
+}
+
+.settingButtonAddAndDelete:hover{
+	cursor:pointer;
+	opacity:1;
+}
+
+.settingButtonAddAndDelete:focus{
+	outline:none;
+}
+
+#setInc{
+	border: 1px solid white;
+	border-bottom: 2px solid #fff;
+	border-top: none;
+	border-radius:5px;
+	display:none;
+}
+
+#setExp{
+	border: 1px solid white;
+	border-bottom: 2px solid #fff;
+	border-top: none;
+	border-radius:5px;
+	display:none;
+}
+
+#setPay{
+	border: 1px solid white;
+	border-bottom: 2px solid #fff;
+	border-top: none;
+	border-radius:5px;
+	display:none;
+}
+
+.radio {
+	position: relative;
+	cursor: pointer;
+	line-height: 20px;
+	font-size: 12px;
+	margin: 5px;
+	width:100%;
+}
+.radio .label {
+	position: relative;
+	display: block;
+	float: left;
+	margin-right: 10px;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #fff;
+	border-radius: 100%;
+	-webkit-tap-highlight-color: transparent;
+}
+.radio .label:after {
+	content: '';
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+	background: #2e303d;
+	transform: scale(0);
+	transition: all 0.2s ease;
+	opacity: 0.15;
+	pointer-events: none;
+}
+.radio:hover .label:after {
+	transform: scale(2);
+}
+input[type="radio"]:checked + .label {
+	border-color: #fff;
+}
+input[type="radio"]:checked + .label:after {
+	transform: scale(1);
+	transition: all 0.2s cubic-bezier(0.35, 0.9, 0.4, 0.9);
+	opacity: 1;
+}
+
+.hidden {
+	display: none;
+}
+
+.incomesList{
+	background-color:#aaa;
+	text-align:left;
+	color:#2e303d;
+	font-weight: 700;
+	font-size:13px;
+	opacity:0.8;
+	border:1px solid #fff;
+	margin:5px;
+	border-radius:5px;
+}
+
+.optionSetDelete{
+	float:right;
+	border-radius:100%;
+	text-align:center;
+	opacity:0.8;
+	color:#fff;
+	height:20px;
+	width:20px;
+	margin-right:8px;
+	background-color:#2e303d;
+	display:none;
+}
+
+.optionSetDelete:hover{
+	background-color:#b22222;
+	opacity:0.9;
+	color:white;
+}
+
+.optionSetEdit{
+	float:right;
+	border-radius:100%;
+	text-align:center;
+	opacity:0.8;
+	color:#fff;
+	height:20px;
+	width:20px;
+	margin-right:8px;
+	background-color:#2e303d;
+	border:none;
+	padding-right:3px;
+	padding-left:3px;
+	cursor:pointer;
+	display:none;
+}
+
+.optionSetEdit:hover{
+	background-color:#446b43;
+	opacity:0.9;
+	color:white;
+}
+
+.incomesList:hover{
+	background-color: #bbb;
+}
+
+.incomesList:hover .optionSetDelete{
+	display:block;
+}
+
+.incomesList:hover .optionSetEdit{
+	display:block;
 }
 
 #footer 
