--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ h1
 }
 
 input[type="text"],
+input[type="number"],
 input[type="password"],
 input[type="date"],
 textarea
@@ -185,6 +186,7 @@ textarea
 }
 
 input[type="text"]:focus,
+input[type="number"]:focus,
 input[type="password"]:focus,
 input[type="date"]:focus,
 textarea:focus
@@ -676,6 +678,36 @@ input[type="radio"]:checked + .label:after {
 
 .incomesList:hover .optionSetEdit{
 	display:block;
+}
+
+.limitWin{
+	display:none;
+	margin-bottom:15px;
+}
+
+.limitInfo{
+	margin-right:auto;
+	margin-left:auto;
+	border-bottom:1px solid #fff;
+	border-top:1px solid #fff;
+	border-radius:5px;
+	width:100%;
+	padding:5px;
+	height:40px;
+	opacity:0.8;
+}
+
+.infoLimitCategoryLeft{
+	font-size:9px;
+	color:#fff;
+	float:left;
+	padding:1px;
+}
+
+.infoLimitCategoryRight{
+	font-size:9px;
+	color:#fff;
+	float:right;
 }
 
 #footer 
